Use composer for dependency management instead of git submodules

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
     ],
     "require": {
         "php": ">=5.4",
-        "mohiva/common": "master"
+        "mohiva/common": "dev-master"
     }
 }
